<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_play" tools:context="com.example.yzhuo.homework5.PlayActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8.5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/play_title"
                    android:hint="@string/title"
                    android:textSize="@dimen/titleSize"
                    android:textColor="@color/blue"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/listViewMargin"/>
                <ImageView
                    android:id="@+id/play_image"
                    android:layout_width="350dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/play_description"
                    android:hint="@string/title"
                    android:textSize="@dimen/titleTextSize"
                    android:layout_margin="@dimen/listViewMargin"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/play_date"
                    android:hint="@string/date"
                    android:textSize="@dimen/titleTextSize"
                    android:layout_margin="@dimen/listViewMargin"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/play_duration"
                    android:hint="@string/title_activity_play"
                    android:textSize="@dimen/titleTextSize"
                    android:layout_margin="@dimen/listViewMargin"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <include layout="@layout/player_status" />
</LinearLayout>
